WIP Updates project descriptions
Removes old language. Still needs refinement.

--- a/public/index.html
+++ b/public/index.html
@@ -71,19 +71,20 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          Elephant Chart is a skewmorphic organization application. Users can save
-          custom boards and layouts. Board and note colors can be set by user
-          and individual notes can be checked off. A special 'Mat' function
+          Elephant Chart is an organization application. It features a 
+          skewmorphic (life-like) drag and drop, and saveable custom boards 
+          and layouts. Board and note colors can be set by user
+          and individual notes can be checked off. A 'Mat' function
           creates a box that always remains behind the notes, serving as a
-          visual container. Future versions will include a 'Share' function,
-          multi-select, mat-board grouping, and full type customization.
+          visual container that will hold notes placed on top of it.
         </p>
         <p>
-          Built with react. Experimentation with Hooks and Context is needed
-          before much further development. The skewmorphism wasn't obtainable
-          using Refs, if the skewmorphic effect cannot be retained in a
-          Hooks and Context architecture, all DOM queries will need to be moved into
-          state.
+          Future versions will include a 'Share' function,
+          multi-select, additional shapes and note backgrounds, arrows and flow chart graphics, evidence-board-esque strings and tacks, and full type customization.
+        </p>
+        <p>
+          Built with React. Experimentation with Hooks and Context is needed
+          before much further development. Potential full refactor if skewmorphic effect can be maintained.
         </p>
       </div>
     </div>
@@ -123,18 +124,15 @@
           This project was built for a Colorado-based local business,
           unfortunately affected by the recent fires. The business' main
           advertising medium is face to face contact and referrals, which
-          needed to be backed up with a website easily served up on a
-          customer's phone. The client requested that all materials be
+          needed to be backed up with a website quickly delivered on a potential customer's phone. The client requested that all materials be
           presented on a single page. Delivering all the information and
-          functionality one page proved to be a challenge more than I
-          expected, and the project quickly grew out of my initially staged
-          plans for development.
+          functionality on one page was an interesting challenge.
         </p>
         <p>
           The site runs on a node and express server. The site is a single
-          page presentation. It is a landing page, about page, product page
-          and order form at once. It uses a simple parallax on desktop and
-          image background to provide a solid color at the top for legibility
+          page presentation. It's a Landing page, About page, Product page,
+          and Order page in one. It uses a single parallax on desktop and
+          custom image background to provide a solid color at the top for legibility
           and cleanliness, and a Colorado-esque scene at the bottom for
           customer familiarity and business branding.
         </p>
@@ -176,17 +174,14 @@
           using the same user interface. The application is highly extensible,
           using dependency injection, software interfaces, and object-oriented
           paradigms. It is still in development, will be adding MySQL Shell
-          and Mongo Atlas connections.
+          and Mongo Atlas connections. The project is on 'hold' until an appropriate UI tech is implemented.
         </p>
         <p>
-          The primary functional requirement of this application is the
-          ability to make queries upon multiple databases from the same
-          window. The requirements do not encompass extensive creation of
-          records, however full SQL statements can be interpreted. The
-          project's main limitation is the chosen UI tech. Current
-          implementation of table display for data in tKinter is too
-          difficult, UI tech and layer needs to be changed. Usage of layered
-          architecture and software interfaces will help in the conversion to
+          The primary functional requirement of this application is to query different database providers from the same
+          application window. The requirements do not encompass extensive creation of
+          records at this time, however full SQL statements can be interpreted. The
+          project's primary limitation is the chosen User Interfave tech. Displaying table data in tKinter is highly impractical. A completely new UI technology and layer needs to be chosen and created. Layered
+          architecture and software interfaces will allow for an easy transition to
           a more robust UI.
         </p>
         <p></p>
@@ -225,13 +220,13 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          This project was built for a local business-woman sole-proprietor.
-          Her business model has been restricted to Instagram, limiting her
-          ability to provide her clientele and community access to her
-          services. The LumberJack template allows her to showcase her
-          expertise and have a blog generating affiliate links and providing
-          additional learning and enrichment opportunities to her clients. I
-          worked with the owner, matching her business mission statement with
+          This project was built for a local business sole-proprietorship.
+          The business model has been restricted to Instagram, limiting the
+          ability to provide clientele and community access to her
+          services. The LumberJack template showcases her
+          expertise while the blog can generate affiliate links and provide
+          additional learning and enrichment opportunities to her clients. 
+          'Friendly' design elements match her business mission statement and has
           a brand sense that appeals to her audience.
         </p>
         <p>
@@ -276,29 +271,30 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
+          This project is two-fold, containing a set of practice tools, as
+          well as a music generator. The tools help a student train their ear
+          in the subjects of melody, relative pitch, pitch memory, and tempo.
+          The music generator is a passion project that I will continue to
+          build upon for some time. My more recent study in object-oriented
+          principles and software architecture leads me to realize the entirety 
+          of the project needs refactor and rearchitecture. However, the 
+          underlying logic in how to solve the musical problem is sound. 
+          JavaScript and the WebAudio API are used to provide a web-based 
+          ear-trainer and infinite music generator.
+        </p>
+
+        <p>
           This project is the conclusion to a hypothesis I had while a music
           teacher. At that time I did not know anything about programming
           other than it must follow standard logic principles. My theory was
           that if you put all the 'rules' of music theory into code and
           allowed for randomization in it's choices, the resultant music would
           be surprisingly familiar and even sound pretty good at times- with
-          only occasional awkward moments. JavaScript and the WebAudio API are
-          used to provide a web-based ear-trainer and infinite music
-          generator.
+          only occasional awkward moments.In time and with further development, 
+          the generator will express the power of western musical structures 
+          by allowing them to 'speak' without human interaction.
         </p>
 
-        <p>
-          This project is two-fold, containing a set of practice tools, as
-          well as a music generator. The tools help a student train their ear
-          in the subjects of melody, relative pitch, pitch memory, and tempo.
-          The music generator is a passion project that I will continue to
-          build upon for some time. My more recent study in object-oriented
-          principles leads me to realize the entirety of the project needs
-          redesign and overhaul to move very far forward. However, the
-          underlying logic in how to sort through the musical information has
-          been solved. In time it will not only be an expression of the power
-          of western musical structures, but also a learning device.
-        </p>
         <p>
           The application has a high level of educational value for a student
           or professional. Certain skills that were difficult to practice have
@@ -355,15 +351,12 @@
           issues. Featuring a headless CMS with Prismic, a multi-network
           aggregator in Curator, and automatic email responses by NodeMailer,
           LumberJack's needs for maintenance and updates are low. Ships with
-          detailed setup instructions accessible by any front-end developer or
-          diligent person.
+          detailed setup instructions.
         </p>
         <p>
-          Making use of third-party API's keeps the website owner from having
-          to engage with the site code after launch, keeping breakage to a
-          minimum. LumberJack's blog is automatically generated using EJS and
-          comes with a "Custom Type" ready to upload to your Prismic
-          repository. Curator allows owners and creators to build feeds from
+          Making use of third-party API's keeps the website operator from having
+          to engage with the site code after launch, keeping user-breakage to a
+          minimum. LumberJack's blog is generated using EJS and Prismic. Curator allows owners and creators to build feeds from
           more than one network, enabling more cross-network audience
           engagement.
         </p>
@@ -401,7 +394,7 @@
         </div>
         <div class="exp-cont-inner">
           <p class="exp-text-right">
-            Clearly delivering information is the key to effective communication. 
+            Clearly delivering information is the key to effective communication.
           </p>
         </div>
       </div>
@@ -443,7 +436,8 @@
       <div class="detail-container">
         <div class="exp-cont-inner">
           <p class="exp-text-left">
-            Every challenge in music or teaching is different. Through teaching I have learned how to complete each problem with a fresh scope, and how subtle mis-steps affect the final result. However
+            Every challenge in music or teaching is different. Through teaching I have learned how to complete each problem with a fresh scope, and how subtle mis-steps affect the final result.
+            However
             you overcome the challenge, the solution must always function correctly, much like coding and development.
           </p>
         </div>
