Updates project descriptions
All project descriptions are updated, experience pane still needs
attention.

--- a/public/index.html
+++ b/public/index.html
@@ -71,20 +71,30 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          Elephant Chart is an organization application. It features a 
-          skewmorphic (life-like) drag and drop, and saveable custom boards 
-          and layouts. Board and note colors can be set by user
-          and individual notes can be checked off. A 'Mat' function
-          creates a box that always remains behind the notes, serving as a
-          visual container that will hold notes placed on top of it.
+          Elephant Chart is an organization application. It features a
+          skewmorphic (life-like) drag and drop, and saveable custom charts
+          and layouts. It uses Firebase for authorization and storage of chart data.
+          Users can log in via Google or any standard email address. The application 
+          makes use of moveable visual containers that can be grouped and layered 
+          to create a tool helpful where organization of ideas or information is 
+          necesary. 
         </p>
         <p>
-          Future versions will include a 'Share' function,
-          multi-select, additional shapes and note backgrounds, arrows and flow chart graphics, evidence-board-esque strings and tacks, and full type customization.
+          Elephant Charts can be extremely large, and each note has a tray where 
+          the user can store additional information. A 'Mat' function allows the user 
+          to group and move notes or other mats together. With the large size, and 
+          three or more levels of visual information organization, Elephant Chart 
+          lives up to it's name. Backboard and note colors can be set by user and 
+          individual notes can be checked off. Future versions will include a 'Share' 
+          function, multi-select, additional shapes and note backgrounds, arrows and 
+          flow chart graphics, strings and tack graphics, full type customization, and 
+          more. Maybe even trash can basketball! It's supposed to imitate real life, 
+          after all.
         </p>
         <p>
           Built with React. Experimentation with Hooks and Context is needed
-          before much further development. Potential full refactor if skewmorphic effect can be maintained.
+          before much further development. Potential full refactor if skewmorphic 
+          effect can be maintained in more efficient architecture.
         </p>
       </div>
     </div>
@@ -124,7 +134,8 @@
           This project was built for a Colorado-based local business,
           unfortunately affected by the recent fires. The business' main
           advertising medium is face to face contact and referrals, which
-          needed to be backed up with a website quickly delivered on a potential customer's phone. The client requested that all materials be
+          needed to be backed up with a website quickly delivered on a 
+          potential customer's phone. The client requested that all materials be
           presented on a single page. Delivering all the information and
           functionality on one page was an interesting challenge.
         </p>
@@ -133,8 +144,9 @@
           page presentation. It's a Landing page, About page, Product page,
           and Order page in one. It uses a single parallax on desktop and
           custom image background to provide a solid color at the top for legibility
-          and cleanliness, and a Colorado-esque scene at the bottom for
-          customer familiarity and business branding.
+          and cleanliness, gradually moving to a Colorado mountain scene for
+          customer familiarity and business branding. Fully custom CSS and JS 
+          animation and form work.
         </p>
         <p></p>
       </div>
@@ -174,15 +186,18 @@
           using the same user interface. The application is highly extensible,
           using dependency injection, software interfaces, and object-oriented
           paradigms. It is still in development, will be adding MySQL Shell
-          and Mongo Atlas connections. The project is on 'hold' until an appropriate UI tech is implemented.
+          and Mongo Atlas connections. The project is on 'hold' until an 
+          appropriate UI tech is implemented.
         </p>
         <p>
-          The primary functional requirement of this application is to query different database providers from the same
-          application window. The requirements do not encompass extensive creation of
-          records at this time, however full SQL statements can be interpreted. The
-          project's primary limitation is the chosen User Interfave tech. Displaying table data in tKinter is highly impractical. A completely new UI technology and layer needs to be chosen and created. Layered
-          architecture and software interfaces will allow for an easy transition to
-          a more robust UI.
+          The primary functional requirement of this application is to query 
+          different database providers from the same application window. The 
+          requirements do not encompass extensive creation of records at this time, 
+          however full SQL statements can be interpreted. The project's primary 
+          limitation is the chosen User Interfave tech. Displaying table data in 
+          tKinter is highly impractical. A completely new UI technology and layer 
+          needs to be chosen and created. Layered architecture and software 
+          interfaces will allow for an easy transition to a more robust UI.
         </p>
         <p></p>
       </div>
@@ -220,20 +235,23 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          This project was built for a local business sole-proprietorship.
-          The business model has been restricted to Instagram, limiting the
-          ability to provide clientele and community access to her
-          services. The LumberJack template showcases her
-          expertise while the blog can generate affiliate links and provide
-          additional learning and enrichment opportunities to her clients. 
-          'Friendly' design elements match her business mission statement and has
-          a brand sense that appeals to her audience.
+          This project was built for a sole-proprietorship dog trainer. The business
+          model has been restricted to Instagram, limiting the ability to provide 
+          clientele and the community access to the business. The LumberJack template 
+          showcases her services, message, and contact info, while the blog can 
+          generate affiliate links and provide additional learning and enrichment 
+          opportunities to her clients.'Friendly' design elements match her business 
+          mission statement and generates a brand sense that appeals to her target 
+          demographics.
         </p>
         <p>
-          Showcasing the client's primary business traffic encourages
-          link-through SEO and grants audience ease-of-access to other
-          materials and monetizable content. Mobile-friendly content creation
-          allows the business owner to produce content more efficiently.
+          As the clients current model is proving successful, directly embedding that 
+          content as a media carousel was efficient for me as a developer and increases 
+          the value of every Instagram post she makes. With her primary business traffic 
+          directly on the site, link-through SEO is increased and grants her audience 
+          ease-of-access to other materials and monetizable content. Mobile-friendly 
+          content creation allows the business owner to produce content more efficiently 
+          and from any place she has service.
         </p>
         <p></p>
       </div>
@@ -271,44 +289,38 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          This project is two-fold, containing a set of practice tools, as
-          well as a music generator. The tools help a student train their ear
-          in the subjects of melody, relative pitch, pitch memory, and tempo.
-          The music generator is a passion project that I will continue to
-          build upon for some time. My more recent study in object-oriented
-          principles and software architecture leads me to realize the entirety 
-          of the project needs refactor and rearchitecture. However, the 
-          underlying logic in how to solve the musical problem is sound. 
-          JavaScript and the WebAudio API are used to provide a web-based 
-          ear-trainer and infinite music generator.
+          JavaScript ES6 and the WebAudio API are used to provide a web-based
+          ear-trainer and infinite music generator. The tools help a student 
+          train their musical ear in the subjects of melody, relative pitch, 
+          pitch memory, and tempo. The music generator is a passion project 
+          and experiment that I will return to. My more recent study in 
+          object-oriented principles and software architecture has led me to 
+          realize the entirety of the project needs refactor and rearchitecture! 
+          However, the underlying logic in how to solve the 'musical problems' 
+          works well, and supports my hypothesis.
         </p>
 
         <p>
-          This project is the conclusion to a hypothesis I had while a music
-          teacher. At that time I did not know anything about programming
-          other than it must follow standard logic principles. My theory was
-          that if you put all the 'rules' of music theory into code and
-          allowed for randomization in it's choices, the resultant music would
-          be surprisingly familiar and even sound pretty good at times- with
-          only occasional awkward moments.In time and with further development, 
-          the generator will express the power of western musical structures 
-          by allowing them to 'speak' without human interaction.
+          The Music Generator is the conclusion to a hypothesis I formed while 
+          teaching music. My theory was that if you programmed all the 'rules' 
+          of music theory and then allowed for randomization in it's choices, 
+          the results would be surprisingly familiar and even sound pretty good 
+          at times- with only occasional awkward moments! The goal of the project,
+          given further development, is that the generator will express the power 
+          of western musical structures (usually termed 'music theory') by allowing 
+          them to 'speak' without human interaction, showcasing their merit and the 
+          'natural behavior' of music.
         </p>
 
         <p>
-          The application has a high level of educational value for a student
-          or professional. Certain skills that were difficult to practice have
-          been made available and accentuated through the use of the trainers.
-          Work your klangfarbenmelodie chops with multiple orchestral
-          instrument choices. The music trainer includes a function which
-          allows for different instruments to randomly substitute the primary
-          instrument sound, while still asking the student to repeat the
-          pattern back. This develops the ear to be sensitive to pitch while
-          listening to instruments outside of their familiarity. The melodic
-          idea consisting of the same note, but different tones/instruments,
-          is called "klangfarbenmelodie". This melody trainer facilitates the
-          study of an invaluable skill that is difficult to methodically
-          practice.
+          The application has a high level of educational value for any musician. 
+          The Melodic Trainer facilitates musical development through use of an 
+          invaluable skill that is difficult to methodically practice. The melodic 
+          idea consisting of the same note, but different tones/instruments, is 
+          called "klangfarbenmelodie". The trainer utilizes and teaches this with a 
+          mode randomizing the playback to multiple orchestral instrument choices. 
+          This develops the ear to be sensitive to pitch while listening to instruments 
+          outside of the students familiarity, accentuating the 'pitch' side of the learning.
         </p>
       </div>
     </div>
@@ -346,9 +358,9 @@
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
           "LumberJack" is a full-stack template developed for small businesses
-          and social media creators. The theme integrates
-          third-party services to eliminate update, security, and code-heavy
-          issues. Featuring a headless CMS with Prismic, a multi-network
+          and social media creators. The theme integrates third-party services 
+          to eliminate update, security, and issues associated with code-heavy 
+          CMS templates. Featuring a headless CMS with Prismic, a multi-network
           aggregator in Curator, and automatic email responses by NodeMailer,
           LumberJack's needs for maintenance and updates are low. Ships with
           detailed setup instructions.
@@ -356,9 +368,9 @@
         <p>
           Making use of third-party API's keeps the website operator from having
           to engage with the site code after launch, keeping user-breakage to a
-          minimum. LumberJack's blog is generated using EJS and Prismic. Curator allows owners and creators to build feeds from
-          more than one network, enabling more cross-network audience
-          engagement.
+          minimum. LumberJack's blog is generated using EJS and Prismic. 
+          Curator allows owners and creators to build feeds from more than one 
+          network, enabling more cross-network audience engagement.
         </p>
         <p>
           Designed for a two-color brand scheme with highly legible greyscale
