--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
           different database providers from the same application window. The 
           requirements do not encompass extensive creation of records at this time, 
           however full SQL statements can be interpreted. The project's primary 
-          limitation is the chosen User Interfave tech. Displaying table data in 
+          limitation is the chosen user interface tech. Displaying table data in 
           tKinter is highly impractical. A completely new UI technology and layer 
           needs to be chosen and created. Layered architecture and software 
           interfaces will allow for an easy transition to a more robust UI.
