Updates gallery images
Updates and orders all images, puts tech stack into <ul>.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <div class="top-container">
     <h1>hi, i'm ash thomas.</h1>
     <img class="avatar" src="/images/self_avatar.png" />
-    <h2>i'm an engineer & programmer.</h2>
+    <h2>i'm a fullstack web engineer.</h2>
   </div>
 
   <div class="banner">
@@ -32,7 +32,7 @@
     <div class="inner-about-container">
       <h2 class="about-title">A bit about me</h2>
       <p class="about">
-        React & JavaScript engineer and developer. My focus is to create
+        React & JavaScript Full Stack Engineer. My focus is to create
         functional and beautiful tools and layouts.
       </p>
       <button class="github-link" type="button" onclick="window.open('https://github.com/ashthomasweb', target='_blank')">
@@ -49,18 +49,22 @@
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
           <button id="gallery-btn-7" class="gallery-btn g-btn-left" type="button" onclick="gallery7Left()"></button>
-          <img id="gallery7-img" class="main-img" src="/images/gallery/flow-post/FPcapture1.png" />
+          <img id="gallery7-img" class="main-img" src="/images/gallery/elephant-chart/EC6.png" />
           <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery7Right()"></button>
         </div>
 
         <div class="gallery-right-section">
           <h3>Productivity Application</h3>
           <p>
-            <a href="https://elephantchart.com" target="_blank">www.elephantchart.com</a>
+            <a href="https://elephantchart.com" target="_blank">www.elephantchart.com</a><br /><i>on-going development</i>
           </p>
           <br />
           <h4>Tech</h4>
-          <p>Node.js, React, Firebase for Auth and Storage</p>
+          <ul>
+            <li><span class='tech-item'>Node.js</span></li> 
+            <li><span class='tech-item'>React</span></li>
+            <li><span class='tech-item'>Firebase for Auth and Storage</span></li>
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/react--elephant-chart', target='_blank')">
             View GitHub Repo
           </button>
@@ -116,11 +120,15 @@
         <div class="gallery-right-section">
           <h3>Client Project</h3>
           <p>
-            <a href="https://wyldgreens.herokuapp.com" target="_blank">Wyldgreens</a>
+            <a href="https://wyldgreens.herokuapp.com" target="_blank">www.wyldgreens.com</a>
           </p>
           <br />
           <h4>Tech</h4>
-          <p>Node.js, JS, NodeMailer</p>
+          <ul>
+            <li><span class='tech-item'>Node.js</span></li>
+            <li><span class='tech-item'>JS</span></li>
+            <li><span class='tech-item'>NodeMailer</span></li>
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--wyldgreens', target='_blank')">
             View GitHub Repo
           </button>
@@ -162,7 +170,7 @@
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
           <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery6Left()"></button>
-          <img id="gallery6-img" class="main-img" src="/images/gallery/metaqdb/capture3.png" />
+          <img id="gallery6-img" class="main-img" src="/images/gallery/metaqdb/window-view.jpg" />
           <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery6Right()"></button>
         </div>
 
@@ -171,7 +179,14 @@
           <p>MetaQuery DB<br /><i>on-going development</i><br /><i>basic UI</i></p>
           <br />
           <h4>Tech</h4>
-          <p>Python, MySQL, MongoDB, tKinter, PyMongo</p>
+          <ul>
+            <li><span class='tech-item'>Python</span></li>
+            <li><span class='tech-item'>MySQL</span></li>
+            <li><span class='tech-item'>MongoDB</span></li>
+            <li><span class='tech-item'>tKinter</span></li>
+            <li><span class='tech-item'>PyMongo</span></li>
+
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/python--metaquery-db', target='_blank')">
             View GitHub Repo
           </button>
@@ -199,7 +214,6 @@
           needs to be chosen and created. Layered architecture and software 
           interfaces will allow for an easy transition to a more robust UI.
         </p>
-        <p></p>
       </div>
     </div>
 
@@ -224,7 +238,14 @@
           </p>
           <br />
           <h4>Tech</h4>
-          <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
+          <ul>
+            <li><span class='tech-item'>Node.js</span></li>
+            <li><span class='tech-item'>Express</span></li>
+            <li><span class='tech-item'>EJS</span></li>
+            <li><span class='tech-item'>Prismic</span></li>
+            <li><span class='tech-item'>Curator</span></li>
+            <li><span class='tech-item'>NodeMailer</span></li>
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--looseleashdog.com', target='_blank')">
             View GitHub Repo
           </button>
@@ -253,7 +274,6 @@
           content creation allows the business owner to produce content more efficiently 
           and from any place she has service.
         </p>
-        <p></p>
       </div>
     </div>
 
@@ -278,7 +298,11 @@
           </p>
           <br />
           <h4>Tech</h4>
-          <p>ES6, WebAudio, Local Storage</p>
+          <ul>
+            <li><span class='tech-item'>ES6</span></li>
+            <li><span class='tech-item'>WebAudio</span></li>
+            <li><span class='tech-item'>Local Storage</span></li>
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')">
             View GitHub Repo
           </button>
@@ -346,7 +370,14 @@
           </p>
           <br />
           <h4>Tech</h4>
-          <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
+          <ul>
+            <li><span class='tech-item'>Node.js</span></li>
+            <li><span class='tech-item'>Express</span></li>
+            <li><span class='tech-item'>EJS</span></li>
+            <li><span class='tech-item'>Prismic</span></li>
+            <li><span class='tech-item'>Curator</span></li>
+            <li><span class='tech-item'>NodeMailer</span></li>
+          </ul>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">
             View GitHub Repo
           </button>
