--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,18 @@
   <title>Ash Thomas Web</title>
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/gallery.css" />
+  <link rel="stylesheet" href="./css/contact.css" />
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/whd6rrl.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap" />
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 </head>
 
 <body>
   <div class="top-container">
     <h1>hi, i'm ash thomas.</h1>
     <img class="avatar" src="/images/self_avatar.png" />
-    <h2>i'm a fullstack web engineer.</h2>
+    <h2>i'm a full-stack web engineer.</h2>
   </div>
 
   <div class="banner">
@@ -48,9 +48,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-7" class="gallery-btn g-btn-left" type="button" onclick="gallery7Left()"></button>
+          <button id="gallery-btn-7" class="gallery-btn g-btn-left" type="button" onmousedown="gallery7Left()"></button>
           <img id="gallery7-img" class="main-img" src="/images/gallery/elephant-chart/EC6.png" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery7Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery7Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -112,9 +112,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
+          <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onmousedown="gallery5Left()"></button>
           <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/Capture1.png" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery5Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -169,9 +169,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery6Left()"></button>
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onmousedown="gallery6Left()"></button>
           <img id="gallery6-img" class="main-img" src="/images/gallery/metaqdb/window-view.jpg" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery6Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery6Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -226,9 +226,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery1Left()"></button>
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onmousedown="gallery1Left()"></button>
           <img id="gallery1-img" class="main-img" src="/images/gallery/loose-leash-dog/lld-capture.png" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery1Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery1Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -286,9 +286,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onmousedown="gallery4Left()"></button>
           <img id="gallery4-img" class="main-img" src="/images/gallery/music-trainer/melody.jpg" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery4Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -358,9 +358,9 @@
     <div class="card--gallery">
       <div class="card--gallery-inner">
         <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery3Left()"></button>
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onmousedown="gallery3Left()"></button>
           <img id="gallery3-img" class="main-img" src="/images/gallery/lumber/capture.png" />
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery3Right()"></button>
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onmousedown="gallery3Right()"></button>
         </div>
 
         <div class="gallery-right-section">
@@ -617,9 +617,10 @@
   </section>
 
   <footer>
-    <div class="footer-attributions"></div>
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
+
+<!-- END of document -->
