Slight wording change

--- a/public/index.html
+++ b/public/index.html
@@ -497,7 +497,7 @@
         </div>
         <div class="exp-cont-inner">
           <p class="exp-text-right">
-            My first computer was the latest and greatest 6x86 Pentium chip 
+            My first computer had the latest and greatest 6x86 Pentium chip 
             of 1996! I started studying layout while operating an offset printing press in 
             high-school. I have always been drawn to layout and technology, 
             and the elegance in how information can be displayed or delivered.
