Attempts refactor on gallery
Leaving well enough alone for now. Galleries are functioning, will
consolidate the copy/paste scopes for the seperate carousels in a future
refactor.

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
           skewmorphic (life-like) drag and drop, and saveable custom charts
           and layouts. It uses Firebase for authorization and storage of chart data.
           Users can log in via Google or any standard email address. The application 
-          makes use of moveable visual containers that can be grouped and layered 
-          to create a tool helpful where organization of ideas or information is 
-          necessary. 
+          makes use of moveable visual containers that can be grouped and layered. 
+          Elephant Chart is a tool that can be helpful wherever organization of ideas 
+          or information is necessary. 
         </p>
         <p>
           Elephant Charts can be extremely large, and each note has a tray where 
