Updates experience descriptions
Minor language changs.

--- a/public/index.html
+++ b/public/index.html
@@ -530,7 +530,7 @@
         <div class="exp-cont-inner">
           <p class="exp-text-right">
             Being an educator requires the ability to approach a challenge from as many 
-            directions as it takes to get the job done. The same goes for music. 
+            directions as it takes to get the job done, and the same goes in music. 
             Sometimes it's a delicate task, occasionally it takes heavy lifting.
             I am experienced with problem solving from many angles.
           </p>
@@ -543,9 +543,9 @@
         <div class="exp-cont-inner">
           <p class="exp-text-left">
             In teaching and music, clearly delivering information is the key 
-            to effective communication. This seems to apply everywhere! From 
-            a symphony to comments put into the code, delivering a printed message 
-            to structuring an object, the less extraneous fluff the better.
+            to effective communication. This seems to apply in many places! From 
+            a symphony to comments put into code, delivering a message in print 
+            to structuring an object, less fluff produces a better outcome.
           </p>
         </div>
         <div class="exp-cont-inner">
