--- a/public/index.html
+++ b/public/index.html
@@ -589,7 +589,7 @@
         </div>
         <div id="error" class="response-box">
           <p>Ah bummer!</p>
-          <p>Something went wrong. But I've built a backup plan.</p>
+          <p>Something went wrong. I've built a backup plan.</p>
           <p>
             Here is an old-fashioned mailto:
             <a href="mailto:ashthomasweb@gmail.com">ashthomasweb@gmail.com</a>
